@startuml
    namespace com.hack23.cia.web.impl.ui.application.views.common {

        class MainView [[MainView.html]] {
            {static} +NAME: String
            +MainView(ApplicationContext)
        }

        abstract class AbstractView [[AbstractView.html]] {
            #pageActionEventHelper: PageActionEventHelper
            #AbstractView(Map<String, PageModeContentFactory>, String)
            #createBasicLayoutWithPanelAndFooter(String): void
            +enter(ViewChangeEvent): void
            +getBarmenu(): MenuBar
            #getPanel(): Panel
            +postConstruct(): void
        }

        AbstractView <|-- MainView
        com.vaadin.ui.Panel <|-- AbstractView
        com.vaadin.navigator.View <|.. AbstractView
        AbstractView --> com.hack23.cia.web.impl.ui.application.views.common.pagelinks.api.PageLinkFactory: pageLinkFactory
    }

    namespace com.vaadin.ui {
        class Panel {
            #actionManager: ActionManager
        }
    }

    namespace com.vaadin.navigator {
        interface View {
            +enter(ViewChangeEvent): void
            +beforeLeave(ViewBeforeLeaveEvent): void
            +getViewComponent(): Component
        }
    }

    center footer UMLDoclet 2.0.12, PlantUML 1.2020.16
@enduml
